# Ambassador

./: .gitignore  CMakeLists.txt  README.md  ambassador.cpp
include/: Beacon.h  Client.h  Constants.h  EventSystem.h  Handler.h  ProximitySystem.h  Server.h
libs/: json.hpp
src/: Beacon.cpp  Client.cpp  EventSystem.cpp  Handler.cpp  ProximitySystem.cpp  Server.cpp
